--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -136,7 +136,7 @@
 
         </h:panelGroup>
         <div class="uk-container uk-container-small uk-margin-medium-top uk-margin-large-bottom">
-            <div class="uk-text-bold uk-margin-remove-bottom titulo-section padding-titulo">
+            <div class="uk-text-bold uk-margin-remove-bottom titulo-section padding-titulo primera-mayuscula">
                 <h:outputText
                               value="#{empty dashboardProfesorControlador.grupoModeloLista ? profesor['dashboard.table.title.not.group'] : profesor['dashboard.table.title.group']}">
                 </h:outputText>
