datos reporte cuantitativo falta

--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -121,6 +121,7 @@
                         </div>
                     </h:panelGroup>
                 </h:form>
+                <button id="boton-reporte" class="boton-escuadron-base">Reporte</button>
             </h:panelGroup>
         </div>
         <h:panelGroup layout="block" id="graficas" >
