estilos a los botones profesores

--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -121,7 +121,9 @@
                         </div>
                     </h:panelGroup>
                 </h:form>
-                <button id="boton-reporte" class="boton-escuadron-base">Reporte</button>
+                <div class="boton-reporte">
+                    <button id="boton-reporte" class="boton-escuadron-base">Reporte</button>
+                </div>
             </h:panelGroup>
         </div>
         <h:panelGroup layout="block" id="graficas" >
