camobios en reglas de navegacion

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -14,11 +14,10 @@
     </f:metadata>
     <ui:define name="menu">
         <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
-<!--            <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>-->
+           <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
             <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
-<!--            <li class="uk-text-uppercase nav-sub-active"><h:link styleClass="letra-color-subnav" outcome="detalle-alumno" value="Student Details"/></li>-->
-<!--            <li class="uk-text-uppercase"><h:link outcome="biblioteca-profesor2" styleClass="letra-color-subnav" value="Library"/> </li>-->
-            <li class="uk-text-uppercase"><a href="#" class="letra-color-subnav">Edit profile</a></li>
+
+
         </ul>
         <div class="uk-navbar-left uk-hidden@m">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
@@ -29,9 +28,6 @@
                 <ul class="uk-nav  nav-sub-offcanvas ">
                     <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
                     <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
-                    <li class="uk-text-uppercase nav-sub-active"><h:link styleClass="letra-color-subnav" outcome="detalle-alumno" value="Student Details"/></li>
-                    <li class="uk-text-uppercase"><h:link outcome="biblioteca-profesor2" styleClass="letra-color-subnav" value="Library"/> </li>
-                    <li class="uk-text-uppercase"><a href="#" class="letra-color-subnav">Edit profile</a></li>
                 </ul>
             </div>
         </div>
